crates/solidity-v2/testing/snapshots/diagnostics_output/structure/function_name_matches_container/library/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Functions are not allowed to have the same name as the enclosing container.
   ╭─[input.sol:5:3]
   │
 5 │   function L() internal pure {}
   │   ──────────────┬──────────────  
   │                 ╰──────────────── Error occurred here.
───╯
